--- a/rssdiscoveryengine_app/templates/home.html
+++ b/rssdiscoveryengine_app/templates/home.html
@@ -133,16 +133,13 @@
 				The RSS Discovery Engine exists to encourage people to use RSS for finding and consuming their news and current events.
 			</p>
 			<p>
-				RSS is the most independent way to be notified of new content from your favorite author and creators. When you follow a feed you no longer have any need for social networking, micro-blogging, or search engine to help you find new content from that site.
+				RSS is the most independent way to be notified of new content from your favorite authors and creators. When you follow a feed you no longer have any need for social networking, micro-blogging, or search engines to help you find new content from that site.
 			</p>
 
 			<h2>RSS is Healthier for Society Than Alternatives</h2>
 			<p>
-					Social networking and search engines help us all keep in touch. But when people are dependent on them for news and current events, then society becomes much more susceptible to manipulation.
+				Social networking and search engines help us all keep in touch. But when people are dependent on them for news and current events, then society becomes much more susceptible to manipulation.
 			</p>
-			
-			<h2>Find RSS Feeds Using Blogs You Already Trust</h2>
-			<p>The RSS Discovery Engine exists to encourage people to use RSS.</p>
 			
 			<h2>Further Reading</h2>
 			<ul>
