Pre-alpha header

--- a/rssdiscoveryengine_app/templates/home.html
+++ b/rssdiscoveryengine_app/templates/home.html
@@ -104,7 +104,7 @@
 			<div class="bubble"></div>
 		</div>
 			<div class="wrapper">
-				<h1>RSS Discovery Engine</h1>
+				<h1>RSS Discovery Engine  <em>pre-alpha</em></h1>
 			<form method="POST">
 				<input placeholder="http..." type="text" name="blog_url" value="{{ blog_url }}" />
 				<button type="submit" onclick="document.getElementById('loader').removeAttribute('style')">Submit</button>
