check user input for trailing spaces and require protocol prefix

--- a/rssdiscoveryengine_app/templates/home.html
+++ b/rssdiscoveryengine_app/templates/home.html
@@ -94,6 +94,16 @@
 				color: white;
 				border:none;
 			}
+
+			/* responsive files */
+
+			@media only screen and (max-width: 480px) {
+				.wrapper {
+					width: auto;
+					padding:0 16px;
+				}
+			}
+
 		</style>
 	</head>
 	<body>
