Refine input UI and server side validation.

--- a/rssdiscoveryengine_app/templates/home.html
+++ b/rssdiscoveryengine_app/templates/home.html
@@ -116,8 +116,13 @@
 			<div class="wrapper">
 				<h1>RSS Discovery Engine  <em>pre-alpha</em></h1>
 			<form method="POST">
-				<input placeholder="http..." type="text" name="blog_url" value="{{ blog_url }}" />
-				<button type="submit" onclick="document.getElementById('loader').removeAttribute('style')">Submit</button>
+				<input 
+					placeholder="http..." 
+					type="url" 
+					name="blog_url" 
+					value="{{ blog_url }}" 
+					required />
+				<button type="submit" onsubmit="document.getElementById('loader').removeAttribute('style')">Submit</button>
 			</form>
 			</div>
 			<div class="wrapper">
