--- a/rssdiscoveryengine_app/templates/home.html
+++ b/rssdiscoveryengine_app/templates/home.html
@@ -113,7 +113,8 @@
 			a.url {
 				font-style: italic;
 				text-decoration: none;
-				color: #3b3b3b;
+				color: #494949;
+				font-size: 0.8em;
 			}
 
 			/* Responsive Styles */
